updated some sections with edits

--- a/scribe-bib.bib
+++ b/scribe-bib.bib
@@ -1,11 +1,32 @@
-@inproceedings{508561119950101,
+@article{Cip,
+author = "M. Cipolla",
+title = "Un metodo per la risoluzione della congruenza di secondo grado",
+year = "1903",
+pages = "154-163",
+journal = "Rendiconto dell’Accademia Scienze Fisiche e Matematiche",
+series = "3",
+volume = "IX"}
+@article{BG,
+author = "Michael Blum and Shafi Goldwasser",
+title = "An Efficient Probabilistic Public-Key Encryption Scheme Which Hides All Partial Information",
+year = "1984",
+pages = "289-302",
+journal = "Advances in Cryptology - Crypto 84",
+volume = "196"}
+@article{ElGamal,
+author = "Taher ElGamal",
+title = "A Public Key Cryptosystem and a Signature Scheme Based on Discrete Logarithms",
+year = "1985",
+journal = "IEEE Transactions on Information Theory"
+}
+@inproceedings{BRDS,
 Address = {Adv. Networking Lab., IBM Thomas J. Watson Res. Center, Yorktown Heights, NY, USA},
 Author = {Bellare, M. and Rogaway, P. and De Santis, A.},
 Title = {Optimal asymmetric encryption.},
 URL = {http://libproxy.mit.edu/login?url=https://search.ebscohost.com/login.aspx?direct=true&AuthType=cookie,sso,ip,uid&db=inh&AN=5085611&site=eds-live},
 Year = {1995},
 }
-@article{1401945620040701,
+@article{CGH,
 Abstract = {We take a critical look at the relationship between the security of cryptographic schemes in the Random Oracle Model, and the security of the schemes that result from implementing the random oracle by so called "cryptographic hash functions". The main result of this article is a negative one: There exist signature and encryption schemes that are secure in the Random Oracle Model, but for which any implementation of the random oracle results in insecure schemes. In the process of devising the above schemes, we consider possible definitions for the notion of a "good implementation" of a random oracle, pointing out limitations and challenges. [ABSTRACT FROM AUTHOR]},
 Author = {Canetti, Ran and Goldreich, Oded and Halevi, Shai},
 ISSN = {00045411},
