--- a/scribe-bib.bib
+++ b/scribe-bib.bib
@@ -19,12 +19,19 @@ title = "A Public Key Cryptosystem and a Signature Scheme Based on Discrete Loga
 year = "1985",
 journal = "IEEE Transactions on Information Theory"
 }
-@inproceedings{BRDS,
-Address = {Adv. Networking Lab., IBM Thomas J. Watson Res. Center, Yorktown Heights, NY, USA},
-Author = {Bellare, M. and Rogaway, P. and De Santis, A.},
-Title = {Optimal asymmetric encryption.},
-URL = {http://libproxy.mit.edu/login?url=https://search.ebscohost.com/login.aspx?direct=true&AuthType=cookie,sso,ip,uid&db=inh&AN=5085611&site=eds-live},
-Year = {1995},
+@Inbook{Bellare1995,
+author="Bellare, Mihir
+and Rogaway, Phillip",
+editor="Santis, Alfredo",
+chapter="Optimal asymmetric encryption",
+title="Advances in Cryptology --- EUROCRYPT'94: Workshop on the Theory and Application of Cryptographic Techniques Perugia, Italy, May 9--12, 1994 Proceedings",
+year="1995",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="92--111",
+isbn="978-3-540-44717-7",
+doi="10.1007/BFb0053428",
+url="http://dx.doi.org/10.1007/BFb0053428"
 }
 @article{CGH,
 Abstract = {We take a critical look at the relationship between the security of cryptographic schemes in the Random Oracle Model, and the security of the schemes that result from implementing the random oracle by so called "cryptographic hash functions". The main result of this article is a negative one: There exist signature and encryption schemes that are secure in the Random Oracle Model, but for which any implementation of the random oracle results in insecure schemes. In the process of devising the above schemes, we consider possible definitions for the notion of a "good implementation" of a random oracle, pointing out limitations and challenges. [ABSTRACT FROM AUTHOR]},
